--- a/app/src/main/res/menu/bottom_nav.xml
+++ b/app/src/main/res/menu/bottom_nav.xml
@@ -21,10 +21,10 @@
     <item
         android:id="@+id/home"
         android:icon="@drawable/ic_extract_z"
-        android:title="@string/extract" />
+        android:title="@string/home" />
 
     <item
-        android:id="@+id/zipCreate"
+        android:id="@+id/archive"
         android:icon="@drawable/ic_create_z"
-        android:title="@string/create" />
+        android:title="@string/archive" />
 </menu>
