update AboutFragment, update file info dialog, add permission request view...

--- a/app/src/main/res/drawable/ic_unknown.xml
+++ b/app/src/main/res/drawable/ic_unknown.xml
@@ -1,10 +1,11 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24.95dp"
-    android:height="31dp"
-    android:viewportWidth="24.95"
-    android:viewportHeight="31"
+<vector android:height="24dp" android:viewportHeight="400"
+    android:viewportWidth="400" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android"
     android:tint="?attr/colorControlNormal">
-  <path
-      android:pathData="M24.5,31a0.5,0.5 0,0 1,-0.5 -0.5L24,8.68l-6.73,-7.68L3.5,1a2.5,2.5 0,0 0,-2.5 2.5v7a0.5,0.5 0,0 1,-1 0v-7a3.5,3.5 0,0 1,3.5 -3.5L17.68,-0l7.27,8.31L24.95,30.5A0.5,0.5 0,0 1,24.5 31ZM22.5,8.95a0.5,0.5 0,0 0,-0.5 -0.5L18.74,8.45a0.78,0.78 0,0 1,-0.79 -0.78L17.95,3.78a0.5,0.5 0,0 0,-1 0v3.86a1.79,1.79 0,0 0,1.79 1.78h3.21A0.5,0.5 0,0 0,22.5 8.95ZM6.68,21.71a0.49,0.49 0,0 0,0.34 -0.12,0.38 0.38,0 0,0 0.15,-0.29 0.35,0.35 0,0 0,-0.15 -0.29,0.49 0.49,0 0,0 -0.34,-0.12 0.51,0.51 0,0 0,-0.35 0.12,0.37 0.37,0 0,0 -0.14,0.29 0.38,0.38 0,0 0,0.14 0.29A0.51,0.51 0,0 0,6.68 21.71ZM8.16,21.71a0.52,0.52 0,0 0,0.34 -0.12,0.4 0.4,0 0,0 0.14,-0.29 0.37,0.37 0,0 0,-0.14 -0.29,0.52 0.52,0 0,0 -0.34,-0.12 0.54,0.54 0,0 0,-0.36 0.12,0.37 0.37,0 0,0 -0.14,0.29 0.38,0.38 0,0 0,0.14 0.29A0.54,0.54 0,0 0,8.16 21.71ZM9.63,21.71a0.52,0.52 0,0 0,0.34 -0.12,0.4 0.4,0 0,0 0.14,-0.29 0.37,0.37 0,0 0,-0.14 -0.29,0.52 0.52,0 0,0 -0.34,-0.12 0.51,0.51 0,0 0,-0.35 0.12,0.34 0.34,0 0,0 -0.14,0.29 0.35,0.35 0,0 0,0.14 0.29A0.51,0.51 0,0 0,9.63 21.71Z"
-      android:fillColor="#428dff"/>
+    <path android:fillColor="#101010" android:pathData="M325,105H250a5,5 0,0 1,-5 -5V25a5,5 0,1 1,10 0V95h70a5,5 0,1 1,0 10Z"/>
+    <path android:fillColor="#101010" android:pathData="M325,154.83a5,5 0,0 1,-5 -5V102.07L247.93,30H100A20,20 0,0 0,80 50v98.17a5,5 0,0 1,-10 0V50a30,30 0,0 1,30 -30H250a5,5 0,0 1,3.54 1.46l75,75A5,5 0,0 1,330 100v49.83A5,5 0,0 1,325 154.83Z"/>
+    <path android:fillColor="#101010" android:pathData="M300,380H100a30,30 0,0 1,-30 -30V275a5,5 0,0 1,10 0v75a20,20 0,0 0,20 20H300a20,20 0,0 0,20 -20V275a5,5 0,0 1,10 0v75A30,30 0,0 1,300 380Z"/>
+    <path android:fillColor="#101010" android:pathData="M275,280H125a5,5 0,0 1,0 -10H275a5,5 0,0 1,0 10Z"/>
+    <path android:fillColor="#101010" android:pathData="M200,330H125a5,5 0,0 1,0 -10h75a5,5 0,0 1,0 10Z"/>
+    <path android:fillColor="#101010" android:pathData="M325,280H75a30,30 0,0 1,-30 -30V173.17a30,30 0,0 1,30 -30h0.2l250,1.66a30.09,30.09 0,0 1,29.81 30V250A30,30 0,0 1,325 280ZM75,153.17a20,20 0,0 0,-20 20V250a20,20 0,0 0,20 20H325a20,20 0,0 0,20 -20V174.83a20.06,20.06 0,0 0,-19.88 -20l-250,-1.66Z"/>
+    <path android:fillColor="#101010" android:pathData="M203.38,220.69h-7.62v-5.27a7.14,7.14 0,0 1,1.07 -4.18,25 25,0 0,1 4.71,-4.34q5.55,-4.26 5.55,-9a7.59,7.59 0,0 0,-2.17 -5.7,7.75 7.75,0 0,0 -5.64,-2.11q-8,0 -9.49,11.13l-8.52,-1.52q0.78,-8.32 6.15,-13.07a18.78,18.78 0,0 1,12.87 -4.75,17.67 17.67,0 0,1 12.34,4.43 14.3,14.3 0,0 1,4.88 11,14.82 14.82,0 0,1 -1.35,6.23 14.48,14.48 0,0 1,-3.07 4.57,92 92,0 0,1 -7.27,5.68 5.52,5.52 0,0 0,-2 2.21A16,16 0,0 0,203.38 220.69ZM204.94,226.24L204.94,236h-9.18v-9.77Z"/>
 </vector>
