--- a/app/src/main/res/layout/layout_permission_request.xml
+++ b/app/src/main/res/layout/layout_permission_request.xml
@@ -17,40 +17,39 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:fitsSystemWindows="true">
 
     <TextView
-        android:id="@+id/progressText"
+        android:id="@+id/tv_permission_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/extracting"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
-        android:textSize="18sp" />
-
-    <com.google.android.material.progressindicator.LinearProgressIndicator
-        android:id="@+id/progressBar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:indeterminate="false"
-        android:max="100"
-        android:progress="0"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"/>
+        android:layout_gravity="center"
+        android:text="@string/storage_access_permission_text"
+        android:textSize="16sp"
+        android:layout_margin="16dp"/>
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/backgroundButton"
-        android:layout_width="match_parent"
+        android:id="@+id/btn_grant_access"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        style="@style/Widget.Material3.Button.TonalButton"
+        android:layout_gravity="center"
+        android:text="@string/grant_access"
         app:cornerRadius="5dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
-        android:text="@string/background" />
+        style="@style/Widget.Material3.Button.TonalButton"
+        android:layout_margin="16dp"/>
+
+    <TextView
+        android:id="@+id/tv_privacy_policy"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/privacy_policy"
+        android:layout_gravity="center"
+        android:textColor="@color/md_theme_primary"
+        android:textSize="14sp"
+        android:clickable="true"
+        android:layout_margin="16dp"
+        android:focusable="true"/>
 </LinearLayout>
