--- a/app/src/main/res/layout/password_input_dialog.xml
+++ b/app/src/main/res/layout/password_input_dialog.xml
@@ -19,12 +19,12 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="16dp">
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
         app:endIconMode="password_toggle">
 
         <com.google.android.material.textfield.TextInputEditText
