--- a/app/src/main/res/layout/item_file.xml
+++ b/app/src/main/res/layout/item_file.xml
@@ -11,12 +11,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="10dp"
-        android:layout_marginBottom="5dp"
+        android:gravity="center_vertical"
         android:alpha="0.7"
         android:text="TextView"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintStart_toEndOf="@id/file_size"
+        app:drawableStartCompat="@drawable/ic_dot" />
 
     <TextView
         android:id="@+id/file_size"
@@ -24,17 +25,30 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginBottom="5dp"
+        android:gravity="center_vertical"
         android:alpha="0.7"
         android:text="TextView"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/card_view" />
 
+    <ImageView
+        android:id="@+id/check_icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="10dp"
+        android:src="@drawable/ic_check"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/card_view"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        style="@style/Widget.Material3.CardView.Outlined"
+        style="@style/Widget.Material3.CardView.Elevated"
+        android:elevation="3dp"
         app:cardCornerRadius="5dp"
         android:layout_margin="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -68,8 +82,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
+        android:layout_marginTop="2dp"
         android:text="TextView"
-        android:textSize="16sp"
+        android:textSize="14sp"
         android:ellipsize="middle"
         android:singleLine="true"
         app:layout_constraintStart_toEndOf="@+id/card_view"
