add support for removable storage

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -47,14 +47,34 @@
             android:scrollIndicators="none"
             android:scrollbars="none">
 
-            <com.google.android.material.chip.ChipGroup
-                android:id="@+id/chipGroupPath"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginEnd="16dp"
-                android:orientation="horizontal"
-                app:singleLine="true"/>
+                android:orientation="horizontal">
+
+                <com.google.android.material.chip.Chip
+                    android:id="@+id/externalStorageChip"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    style="@style/Widget.Material3.Chip.Suggestion.Elevated"
+                    android:layout_marginStart="16dp"
+                    android:elevation="4dp"
+                    android:clickable="true"
+                    android:checkable="false"
+                    app:chipIconVisible="true"
+                    app:chipIcon="@drawable/ic_change"
+                    app:chipCornerRadius="4dp"
+                    android:text="Storage"/>
+
+                <com.google.android.material.chip.ChipGroup
+                    android:id="@+id/chipGroupPath"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginEnd="16dp"
+                    android:orientation="horizontal"
+                    app:singleLine="true"/>
+            </LinearLayout>
         </HorizontalScrollView>
 
         <androidx.recyclerview.widget.RecyclerView
