--- a/app/src/main/res/layout/bottom_sheet_option.xml
+++ b/app/src/main/res/layout/bottom_sheet_option.xml
@@ -5,7 +5,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
-
     <TextView
         android:id="@+id/fileName"
         android:layout_width="wrap_content"
@@ -14,6 +13,7 @@
         android:textSize="18sp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="30dp"
+        android:layout_marginEnd="16dp"
         android:textStyle="bold"/>
 
     <com.google.android.material.button.MaterialButton
@@ -107,5 +107,4 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="20dp"
         android:text="@string/delete" />
-
 </LinearLayout>
