--- a/app/src/main/res/layout/item_file.xml
+++ b/app/src/main/res/layout/item_file.xml
@@ -13,11 +13,11 @@
         android:layout_marginEnd="10dp"
         android:gravity="center_vertical"
         android:alpha="0.7"
+        android:layout_marginBottom="5dp"
         android:text="TextView"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@id/file_size"
-        app:drawableStartCompat="@drawable/ic_dot" />
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <TextView
         android:id="@+id/file_size"
